--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,3 +18,6 @@ jobs:
       env:
         CI: true
         DATABASE_URL: postgres://alchemy:alchemy@postgres:5432/alchemy
+        APP_SECRET: SecretCanary
+        SALT_ROUNDS: 2
+        NODE_ENV: dev
